[gd_scene load_steps=52 format=3 uid="uid://c8hakesyos7gw"]

[ext_resource type="Script" path="res://Missie/missie.gd" id="1_lt1o1"]
[ext_resource type="Texture2D" uid="uid://ya0kggfqkgxf" path="res://Missie/Adventurer/adventurer-Sheet.png" id="1_w8lk7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_saavr"]
atlas = ExtResource("1_w8lk7")
region = Rect2(50, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8g7m"]
atlas = ExtResource("1_w8lk7")
region = Rect2(50, 148, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_cndxu"]
atlas = ExtResource("1_w8lk7")
region = Rect2(100, 148, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_fsvj6"]
atlas = ExtResource("1_w8lk7")
region = Rect2(150, 148, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_3slrq"]
atlas = ExtResource("1_w8lk7")
region = Rect2(200, 148, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_tiaa5"]
atlas = ExtResource("1_w8lk7")
region = Rect2(0, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_fn472"]
atlas = ExtResource("1_w8lk7")
region = Rect2(50, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_tr5os"]
atlas = ExtResource("1_w8lk7")
region = Rect2(100, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7rte"]
atlas = ExtResource("1_w8lk7")
region = Rect2(150, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_oc243"]
atlas = ExtResource("1_w8lk7")
region = Rect2(0, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnx0o"]
atlas = ExtResource("1_w8lk7")
region = Rect2(50, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_33njh"]
atlas = ExtResource("1_w8lk7")
region = Rect2(100, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_v374n"]
atlas = ExtResource("1_w8lk7")
region = Rect2(150, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_8oy0x"]
atlas = ExtResource("1_w8lk7")
region = Rect2(200, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvld4"]
atlas = ExtResource("1_w8lk7")
region = Rect2(250, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_pk1yv"]
atlas = ExtResource("1_w8lk7")
region = Rect2(300, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_jj2wt"]
atlas = ExtResource("1_w8lk7")
region = Rect2(0, 111, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_041j6"]
atlas = ExtResource("1_w8lk7")
region = Rect2(50, 111, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ld3w"]
atlas = ExtResource("1_w8lk7")
region = Rect2(100, 111, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhrlh"]
atlas = ExtResource("1_w8lk7")
region = Rect2(150, 111, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_3b8pl"]
atlas = ExtResource("1_w8lk7")
region = Rect2(300, 111, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxem4"]
atlas = ExtResource("1_w8lk7")
region = Rect2(50, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_jflq0"]
atlas = ExtResource("1_w8lk7")
region = Rect2(300, 185, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_k62ru"]
atlas = ExtResource("1_w8lk7")
region = Rect2(0, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifkbg"]
atlas = ExtResource("1_w8lk7")
region = Rect2(50, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_cx4d2"]
atlas = ExtResource("1_w8lk7")
region = Rect2(100, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrvcf"]
atlas = ExtResource("1_w8lk7")
region = Rect2(150, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfuos"]
atlas = ExtResource("1_w8lk7")
region = Rect2(200, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5ro8"]
atlas = ExtResource("1_w8lk7")
region = Rect2(250, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_js1mr"]
atlas = ExtResource("1_w8lk7")
region = Rect2(300, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlnnf"]
atlas = ExtResource("1_w8lk7")
region = Rect2(0, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbl80"]
atlas = ExtResource("1_w8lk7")
region = Rect2(50, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_n08hi"]
atlas = ExtResource("1_w8lk7")
region = Rect2(100, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_pyn55"]
atlas = ExtResource("1_w8lk7")
region = Rect2(150, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8d13"]
atlas = ExtResource("1_w8lk7")
region = Rect2(200, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1wnj"]
atlas = ExtResource("1_w8lk7")
region = Rect2(250, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_syqp1"]
atlas = ExtResource("1_w8lk7")
region = Rect2(300, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_3q2qd"]
atlas = ExtResource("1_w8lk7")
region = Rect2(0, 296, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcpi3"]
atlas = ExtResource("1_w8lk7")
region = Rect2(50, 296, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_dea4f"]
atlas = ExtResource("1_w8lk7")
region = Rect2(100, 296, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gj81"]
atlas = ExtResource("1_w8lk7")
region = Rect2(50, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_uu1qa"]
atlas = ExtResource("1_w8lk7")
region = Rect2(100, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_yilfx"]
atlas = ExtResource("1_w8lk7")
region = Rect2(150, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_8w4l6"]
atlas = ExtResource("1_w8lk7")
region = Rect2(200, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_uy6wx"]
atlas = ExtResource("1_w8lk7")
region = Rect2(250, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_aadny"]
atlas = ExtResource("1_w8lk7")
region = Rect2(300, 37, 50, 37)

[sub_resource type="SpriteFrames" id="SpriteFrames_oiewj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_saavr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8g7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cndxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fsvj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3slrq")
}],
"loop": true,
"name": &"Fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tiaa5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fn472")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tr5os")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7rte")
}],
"loop": true,
"name": &"Idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oc243")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnx0o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33njh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v374n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8oy0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvld4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pk1yv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jj2wt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_041j6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ld3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhrlh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3b8pl")
}],
"loop": false,
"name": &"Jump",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxem4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jflq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k62ru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifkbg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cx4d2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrvcf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfuos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5ro8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_js1mr")
}],
"loop": false,
"name": &"Punch",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlnnf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbl80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n08hi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pyn55")
}],
"loop": false,
"name": &"Punch 2",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8d13")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1wnj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_syqp1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3q2qd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcpi3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dea4f")
}],
"loop": false,
"name": &"Punch 3",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gj81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uu1qa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yilfx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8w4l6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uy6wx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aadny")
}],
"loop": true,
"name": &"Run",
"speed": 9.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_spqqg"]
radius = 22.0
height = 92.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5eya7"]
size = Vector2(166, 92)

[node name="Missie" type="CharacterBody2D"]
collision_mask = 15
script = ExtResource("1_lt1o1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
scale = Vector2(3.06672, 3.06672)
sprite_frames = SubResource("SpriteFrames_oiewj")
animation = &"Jump"
autoplay = "Idle"
frame = 11
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_spqqg")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
process_callback = 0
limit_left = 0
limit_top = 0
limit_right = 3824
limit_bottom = 650
position_smoothing_enabled = true
position_smoothing_speed = 25.0
drag_horizontal_enabled = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ProgressBarHealth" type="ProgressBar" parent="Control"]
layout_mode = 0
offset_right = 4.0
offset_bottom = 27.0

[node name="ShotArea" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShotArea"]
position = Vector2(-83, 0)
shape = SubResource("RectangleShape2D_5eya7")
one_way_collision_margin = 0.0

[connection signal="body_entered" from="ShotArea" to="." method="_on_shot_area_body_entered"]
[connection signal="body_exited" from="ShotArea" to="." method="_on_shot_area_body_exited"]
